# GUIRA_dinov3_physx

./: CNAME  access_portal.html
.github/workflows/: static.yml
GUIRAmark1/: .env.example  .gitignore  ARCHITECTURE.md  COMPONENT_REFERENCE.md  Functionality.md  Functionality_PhysX_DINOv3.md  INTEGRATION_GUIDE.md  LICENSE  QUICKSTART.md  README.md  benchmark.py  checksums.json  cli.py  config.yaml  create_comprehensive_data.py  create_sample_data.py  download_datasets.py  environment.yml  monitor.py  requirements.txt  run_pipeline.py  simulate_spread.py  test_dry_run_training.py  test_system.py  train_fauna.py  train_fire.py  train_smoke.py  train_veg.py  validate_system.py
GUIRAmark1/.github/: copilot-instructions.md
GUIRAmark1/benchmarks/: benchmark_report.json
GUIRAmark1/config/: fauna_labelmap.yaml  intrinsics.json
GUIRAmark1/docs/: CHANGELOG.md  DEPLOYMENT.md  PH10_IMPLEMENTATION_SUMMARY.md
GUIRAmark1/integrations/guira_core/simulation/physx_server/: .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  build.sh  example_orchestrator_integration.py  physx_client.py  test.sh
GUIRAmark1/integrations/guira_core/simulation/physx_server/omniverse_prototype/: EXAMPLES.md  README.md  __init__.py  run_prototype.py  test_prototype.py  visualize_output.py
GUIRAmark1/integrations/guira_core/simulation/physx_server/proto/: physx.proto
GUIRAmark1/integrations/guira_core/simulation/physx_server/src/: main.cpp
GUIRAmark1/logs/: README.md
GUIRAmark1/models/: README.md
GUIRAmark1/outputs/: README.md
GUIRAmark1/scripts/: README.md  cla_processor.py  convert_fauna_dataset.py  convert_fire_dataset.py  convert_smoke_dataset.py  convert_spread_dataset.py  convert_vegetation_dataset.py  download_datasets.py  download_fauna_dataset.py  download_fire_dataset.py  download_smoke_dataset.py  download_spread_dataset.py  download_util.py  download_vegetation_dataset.py  evaluate_fauna_yolo_csrnet.py  evaluate_fauna_yolo_csrnet_old.py  evaluate_fire_yolov8.py  evaluate_smoke_timesformer.py  evaluate_spread_hybrid.py  evaluate_vegetation_resnet_vari.py  export_fauna_yolo_csrnet.py  export_fire_yolov8.py  export_smoke_timesformer.py  export_spread_hybrid.py  export_vegetation_resnet_vari.py  license_enforcement.py  set_determinism.py  setup_license_system.py  violation_detector.py
GUIRAmark1/src/: inference_hooks.py  maps_adapter.py  (+1 more)
(+144 files in other folders)
